--- a/style.css
+++ b/style.css
@@ -29,3 +29,10 @@ line-height: 100px;
 .red {
     color:red;
 }
+
+.melone {
+    margin: 50px;
+    display: flex; 
+    justify-content: center; 
+    align-items: center;
+}
