--- a/style.css
+++ b/style.css
@@ -1,38 +1,52 @@
 body {
-    font-family: "Arial", sans-serif;
+  font-family: "Arial", sans-serif;
 }
 section {
-    text-align: center;
+  text-align: center;
 }
 .game--container {
-    display: grid;
-    grid-template-columns: repeat(3, auto);
-    width: 306px;
-    margin: 50px auto;
+  display: grid;
+  grid-template-columns: repeat(3, auto);
+  width: 306px;
+  margin: 50px auto;
 }
 .cell {
-    font-family: "Permanent Marker", cursive;
-    width: 100px;
-    height: 100px;
-    box-shadow: 0 0 0 1px #33333313;
-    border: 1px solid #020202;
-    cursor: pointer;
-line-height: 100px;
-    font-size: 60px;
-    background-color: yellow;
+  font-family: "Permanent Marker", cursive;
+  width: 100px;
+  height: 100px;
+  box-shadow: 0 0 0 1px #33333313;
+  border: 1px solid #020202;
+  cursor: pointer;
+  line-height: 100px;
+  font-size: 60px;
+  background-color: yellow;
 }
 
 .blue {
-    color:blue;
+  color: blue;
 }
 
 .red {
-    color:red;
+  color: red;
 }
 
 .melone {
-    margin: 50px;
-    display: flex; 
-    justify-content: center; 
-    align-items: center;
+  visibility: hidden;
+  margin: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.start {
+  margin-right: 1%;
+}
+
+.PlayerBox {
+  margin-top: 1%;
+  display: flex;
+}
+
+.Box {
+  border: 2px solid black;
 }
