--- a/taschenrechner/style.css
+++ b/taschenrechner/style.css
@@ -10,7 +10,8 @@
   justify-content: center;
   font-size: 24px;
   padding: 20px 20px;
-  width: 100%;
+  border-bottom: 0px;
+  overflow: auto;
 }
 
 div {
@@ -18,14 +19,6 @@ div {
 }
 
 .tasten {
-  font-size: 24px;
-  width: 50px;
-  height: 50px;
-  display: grid;
-  display: inline-grid;
-}
-
-.geteilt {
   font-size: 24px;
   width: 50px;
   height: 50px;
