--- a/taschenrechner/style.css
+++ b/taschenrechner/style.css
@@ -12,6 +12,7 @@
   padding: 20px 20px;
   border-bottom: 0px;
   overflow: auto;
+  height: 110px;
 }
 
 div {
@@ -21,6 +22,18 @@ div {
 .tasten {
   font-size: 24px;
   width: 50px;
+  height: 50px;
+  display: grid;
+  display: inline-grid;
+}
+
+.grid-container {
+  display: grid;
+}
+
+.delTaste {
+  font-size: 24px;
+  width: 230px;
   height: 50px;
   display: grid;
   display: inline-grid;
